<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start_tracking">Start</string>
    <string name="stop_tracking">Stop</string>
    <string name="pause_tracking">Pause</string>
    <string name="resume_tracking">Resume</string>
    <string name="finish_tracking">Finish</string>
    <string name="label_km">km</string>
    <string name="label_time">time</string>
    <string name="label_pace">km/h</string>
    <string name="save_activity">Save</string>
    <string name="activity_title_hint">Name your activity</string>
    <string name="history">History</string>
    <string name="compare">Compare</string>
    <string name="hint_search_destination">Search destination…</string>
    <string name="title_choose_destination">Choose a destination</string>
    <string name="msg_waiting_for_location">Waiting for location…</string>
    <string name="msg_no_places_found">No places found</string>
    <string name="cb_save_as_route">Save as route for future runs</string>

</resources>
